<resources>
    <string name="app_name">Digo360</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">GET STARTED</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="heading_one">Manage your case . </string>
    <string name="heading_two">Manage your case .</string>
    <string name="heading_three">Manage your case . </string>
    <string name="title_one">Create stunning NFTs applications with bullet proof guidelines and thoughtful components. </string>
    <string name="title_two">Create stunning NFTs applications with bullet proof guidelines and thoughtful components.</string>
    <string name="title_three">Create stunning NFTs applications with bullet proof guidelines and thoughtful components. </string>
    <string name="salutation">Salutation</string>
    <string name="your_specialization">Your Specialization</string>
    <string name="loading_page">Loading Page</string>
    <string name="home">Home</string>
    <string name="ask_q">Ask Q</string>
    <string name="cases">Case</string>
    <string name="notification">Notification</string>
    <string name="is_he_having">is he having ?</string>
    <string name="child">Child</string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="generate_report">Generate Report</string>
    <string name="view_amp_scane"><![CDATA[View & Scan]]></string>
    <string name="faq">FAQ</string>
    <string name="logout">Are you sure you want to end this\n session ?</string>
    <string name="Confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="edite_one">Patient Name</string>
    <string name="Roadno">Road | Lane No</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="check">Check</string>
    <string name="patients_checkup">Patients CheckUp</string>
    <string name="loding">We saw you are new to us.</string>
    <string name="loading_regis">Hey welcome to Digo360 Please click register button given below. Allow us some more information about to get you in.</string>
    <string name="no_search">No Recent Searches?</string>
    <string name="zipcode">Zipcode</string>
    <string name="Patient">Patient Problem Statement</string>
    <string name="phone"> Please Enter Phone Number</string>
    <string name="invalid_phone">INVALID PHONE NUMBER</string>
    <string name="invalid_msg">The phone number you entered is not valid. Please make sure to use a valid format (e.g., XXX-XXX-XXXX) and try again.</string>
    <string name="invalid_mail_id">INVALID MAIL ID</string>
    <string name="invalid_email">The email address you entered is not valid. Please provide a correct email address in the format example@example.com.</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="name">name</string>
    <string name="previous_details">Previous Details</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="patient_email">Patient email</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="resend">Resend</string>
    <string name="file">120</string>
    <string name="high">High</string>
    <string name="patient_phone_number">Enter Patient\'s Phone Number</string>
    <string name="most_searched">Most Searched</string>
    <string name="retry">Retry</string>
    <string name="Internet">Please Check Your Internet</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="dr_name">Dr. Sangeeta Paul</string>
    <string name="dr_Spec">MD{Medicine}</string>
    <string name="dr_number">+91 9763500291</string>
    <string name="dr_mail">support@webappssoft.com</string>
    <string name="verify_mail">Verify Now</string>
    <string name="spec_name">Child Specialist</string>
    <string name="dr_dob">22 Jan 1999</string>
    <string name="n_a">N/A</string>
    <string name="address_dr">1st Floor jodhpur Gardens Near South City Mall Kolkata700035 India</string>
    <string name="exp_years">0Years</string>
    <string name="course_degree">Course / Degree</string>
    <string name="about_digo360">About Digo360</string>
    <string name="about_digo">About Digo360!</string>
    <string name="privacy_s_policy">Privacy\'s Policy</string>
    <string name="report">Report</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="top_header">Please Enter Your Phone Number</string>
    <string name="agree_amp_continue"><![CDATA[Agree & Continue]]></string>
    <string name="number_hint">97XXXXXX44</string>
    <string name="terms">By Continuing I agree with the</string>
    <string name="privacy_policy">  Privacy Policy,</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="otp">OTP</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="vfy">We have sent an OTP to +91 97XXX - XXXX. Please wait for 2 min before  attempt Next.</string>
    <string name="you_can_request_otp_after">You Can Request OTP after</string>
    <string name="verify_now">Verify Now</string>
    <string name="registration">Registration</string>
    <string name="name_of_your">Name Of Doctor</string>
    <string name="select_gender">Select Gender</string>
    <string name="dob">Enter Your DOB</string>
    <string name="enter_mail">Enter Your Mail</string>
    <string name="suitable_designation">Select Suitable Designation</string>
    <string name="study_year">Select Study Year</string>
    <string name="select_degree">Select Suitable Degree</string>
    <string name="select_specialization">Select Suitable Specialization</string>
    <string name="address">Enter Your Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pin Code</string>
    <string name="select_area">Select Area</string>
    <string name="terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="choose_language">Choose Language</string>
    <string name="lets_start">Lets Start</string>
    <string name="hold">Hold on Getting in...</string>
    <string name="loading_desc">We are creating Specialized Dashboard for you. It might take some to please allow us a moment.</string>
    <string name="search_case">Search by Diseases Name</string>
    <string name="top_diseases">Top diseases</string>
    <string name="top_diseases_search">Most Search Diseases</string>
    <string name="summary">Summary</string>
    <string name="top_diagnosis">Top Diagnosis</string>
    <string name="all">All</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="view_all">View All</string>
    <string name="home_female">Female</string>
    <string name="home_other">Other</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="your_preafferd_language_is_english">Your Preafferd Language is English</string>
    <string name="permission">Permission</string>
    <string name="manage_data_amp_access_permission"><![CDATA[Manage Data & Access Permission]]></string>
    <string name="refer_amp_share"><![CDATA[Refer & Share]]></string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="manage_case">Manage Case</string>
    <string name="case_manage">Case Manage</string>
    <string name="case_storage">Case Storage</string>
    <string name="case_store">Case Store</string>
    <string name="top_searches">Top Searches</string>
    <string name="learn_how_top_searches_works">Learn how top searches works</string>
    <string name="ai_base_questions">AI Base Questions</string>
    <string name="updates_on_ai_amp_question_forms"><![CDATA[Updates on AI & Question Forms]]></string>
    <string name="alerts_amp_reminders"><![CDATA[Alerts & Reminders]]></string>
    <string name="manage_all_the_alerts_amp_reminders"><![CDATA[Manage all the Alerts & Reminders]]></string>
    <string name="case_amp_files"><![CDATA[Case & Files]]></string>
    <string name="manage_all_the_cases_and_files">Manage all the Cases and Files</string>
    <string name="about_digo_360">About Digo360</string>
    <string name="learn_data_amp_terms_of_services"><![CDATA[Learn Data & Terms of Services]]></string>
    <string name="app_version">App Version</string>
    <string name="logout_from_digo360">Logout From Digo360</string>
    <string name="we_keep_your_data_safe">We keep your data safe.</string>
    <string name="personal_details">Personal Details</string>
    <string name="specialization">Specialization</string>
    <string name="general_physician">General Physician</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="experience">Experience</string>
    <string name="college_amp_degree"><![CDATA[College & Degree]]></string>
    <string name="dr_address">Address</string>
    <string name="designation">Designation</string>
    <string name="college_details">College Details</string>
    <string name="submit">Submit</string>
    <string name="college_name">College Name</string>
    <string name="admission_year">Admission Year</string>
    <string name="passout_year">Passout Year</string>
    <string name="admission">Admission Year</string>
    <string name="help">Help</string>
    <string name="help_heading">No FAQ for Your Specialization?</string>
    <string name="faq_desc">Your expertise deserves precise answers. Refresh or try again for FAQs tailored to your specialization</string>
    <string name="back_to_home">Back to Home</string>
    <string name="previous_case">Previous Cases</string>
    <string name="new_case">New Case</string>
    <string name="whats_your_patients_name">Whats your Patient Name ?</string>
    <string name="patient_phone">Patient Phone Number</string>
    <string name="patient_email_optional">Patient Email(Optional)</string>
    <string name="enter_patient_dob">Enter Patient DOB(Optional)</string>
    <string name="enter_patient_age_year">Enter Patient AGE(Year)</string>
    <string name="select_calender">Select DOB</string>
    <string name="enter_year">Age in Year</string>
    <string name="please_select">Please Select</string>
    <string name="email">Email</string>
    <string name="age">age</string>
    <string name="where_is_he_coming_from">Where is he coming from</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="full_address">Full Address</string>
    <string name="area">Area</string>
    <string name="pin_code">Pin Code</string>
    <string name="permission_page">Permission</string>
    <string name="is_he_she_have_bp">Is He/She have BP ?</string>
    <string name="enter_body_temperature">Enter Body Temperature</string>
    <string name="enter_height_and_weight_inc_cm">Enter Height And Weight(inc/cm)</string>
    <string name="choose_pulse_rate">Choose Pulse Rate</string>
    <string name="is_he_she_have_sugar">Is He/She have Sugar ?</string>
    <string name="patient_have_allergy">Patient have Allergy ?</string>
    <string name="patient_have_any_surgery">Patient have any Surgery ?</string>
    <string name="any_other_problem">Any Other Problem ?</string>
    <string name="no_notification_found">No Notification found</string>
    <string name="there_s_no_notification_found_our_app_ensures_you_re_always_in_the_loop">There\'s no Notification found, our app ensures you\'re always in the loop.</string>
    <string name="update_profile">Update Profile</string>
    <string name="doc_name">Name</string>
</resources>