<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bground"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_back_arrow" />

                <TextView
                    android:padding="5dp"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/otpimg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"

                android:src="@drawable/loginbg" />

            <LinearLayout
                android:id="@+id/iv_bg"
                android:layout_below="@+id/otpimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/phone_number"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_header"
                    android:textColor="#CEA0E4"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/epilogue"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_margin="@dimen/_5sdp"
                android:layout_below="@+id/iv_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <LinearLayout
                    android:background="@drawable/time_bg"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_40sdp">
                    <TextView
                        android:text="+91"
                        android:textSize="@dimen/_15ssp"
                        android:textColor="#CEA0E4"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/time_bg"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_height="@dimen/_40sdp">

                    <EditText
                        android:id="@+id/et_phone"
                        android:background="@null"
                        android:textColorHint="@color/purple"
                        android:hint="@string/number_hint"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/purple"
                        android:maxLength="10"
                        android:inputType="number"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginmsg"
                android:layout_margin="10dp"
                android:layout_below="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_8ssp"
                    android:text="@string/terms"/>
                <TextView
                    android:id="@+id/txt_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_8ssp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:text="@string/privacy_policy"/>
                <TextView
                    android:id="@+id/txt_tnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_8ssp"
                    android:textStyle="bold"
                    android:text="@string/terms_amp_conditions"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-2dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="By continuing you agree to our Terms &amp; Condition"
            android:textSize="14dp"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_7sdp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:background="@drawable/ripple_bg"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/agree_amp_continue"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:visibility="visible" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>